# BitcoinBruteForcer

./: .gitignore  CMakeLists.txt  Key.cpp  Key.h  LICENSE.txt  Point.cpp  Point.h  README.md  SpeedTest.xlsx  key.cpp  key.h  main.cpp  point.cpp  point.h  ripemd160.cpp  ripemd160.h  sha256.cpp  sha256.h  test.cpp  test.h
