cmake_minimum_required(VERSION 3.16)
project(BitcoinPuzzle)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Ofast -lpthread")
if (CMAKE_BUILD_TYPE MATCHES Debug)
    add_definitions(-DDEBUG)
endif()
set(Headers sha256.h ripemd160.h Key.h Point.h test.h)
set(Sources sha256.cpp ripemd160.cpp Key.cpp Point.cpp test.cpp main.cpp)
add_executable(bitcoin_puzzle ${Headers} ${Sources})
