cmake_minimum_required(VERSION 3.16)
project(BitcoinBruteForcer)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Ofast -lpthread")
if (CMAKE_BUILD_TYPE MATCHES Debug)
    add_definitions(-DDEBUG)
endif()
set(Headers sha256.h ripemd160.h key.h point.h)
set(Sources sha256.cpp ripemd160.cpp key.cpp point.cpp main.cpp test.cpp test.h)
add_executable(bitcoin_brute_forcer ${Headers} ${Sources})
